# hiccup

./: .gitignore  .gitmodules  LICENSE  README.md  cli.py  hiccup_config.py  pyproject.toml
.github/workflows/: build_pull_request.yml  development.yml  pythonapp.yml
hiccup/: cli.py  config.py  dispatcher.py  functions.py  generate_config.py  logger.py  markdown.py  tasks.py  utils.py  watcher.py
src/: index.md
src/sass/: style.scss
src/templates/: basic.j2
tests/: test_hiccup.py
