[tool.poetry]
name = "hiccup"
version = "0.1.0"
description = "A Gulp-like task-runner aimed at static site generation."
authors = ["Dan Turkel <daturkel@gmail.com>"]
license = "MIT"
readme = "./README.md"

[tool.poetry.dependencies]
python = "^3.7"
toml = "^0.10.0"
marko = "^0.7.1"
coloredlogs = "~10.0"
wcmatch = "~5.1"
Jinja2 = "^2.11.0"
watchgod = "~0.5"
Click = "~7.0"
libsass = "^0.19.4"
python_frontmatter = "^0.5.0"
black = "^19.10b0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
hiccup = "hiccup.cli:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
